--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,30 +1,34 @@
-name: Snake Animation
+name: Generate snake animation
 
 on:
+  schedule: # execute every 12 hours
+    - cron: "* */12 * * *"
+
+  workflow_dispatch:
+
   push:
     branches:
-      - main
-  pull_request:
-    branches:
-      - main
+    - master
 
 jobs:
-  generate-snake:
+  generate:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
+    timeout-minutes: 5
+
     steps:
-      - name: Check out the repository
-        uses: actions/checkout@v2
-
-      - name: Generate Snake animation
-        uses: Platane/snk@v2
+      - name: generate snake.svg
+        uses: Platane/snk/svg-only@v3
         with:
-          github_user: 'josemar-santos'
-          svg_out_path: 'output/github-contribution-grid-snake.svg'
+          github_user_name: ${{ github.repository_owner }}
+          outputs: dist/snake.svg?palette=github-dark
 
-      - name: Commit and push the snake animation
-        uses: EndBug/add-and-commit@v7
+
+      - name: push snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
-          author_name: 'José dos Santos'
-          author_email: 'josemenezesdossantos90@gmail.com'
-          message: 'Generate Snake animation'
-          add: 'output/github-contribution-grid-snake.svg'
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
